--- a/src/main/resources/public/css/app.css
+++ b/src/main/resources/public/css/app.css
@@ -1,16 +1,3 @@
 body {
-  background-color: #ddd;
-}
-
-
-.add_category_buttons {
-  display:inline;
-}
-
-.add_category_buttons button{
-  margin-left: 15px;
-}
-
-.button-style{
-  margin-bottom:10px; 
+  background-color: #eee;
 }
