--- a/src/main/resources/public/css/app.css
+++ b/src/main/resources/public/css/app.css
@@ -1,3 +1,22 @@
 body {
   background-color: #eee;
 }
+
+#logo {
+	color: white;
+}
+
+.jumbotron {
+    position: relative;
+    background: #000 url("/img/main-image.jpg") bottom center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.main-title {
+	color: white;
+	font-family: 'Handlee', sans-serif;
+	text-align: center;
+}
